--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <title>⭐2️⃣💻</title>
+  <title>Start2️⃣Code</title>
 
   <link rel="shortcut icon" href="tutorial/static/images/favicon.ico" type="image/x-icon">
 
