--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       padding: 0;
       border: 0;
       box-sizing: border-box;
-      background: #000;
+      background: hsl(0, 0%, 10%);
       color: white;
       font-family: Arial, Helvetica, sans-serif;
       height: 100vh;
