--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <title>App | Start2️⃣Code</title>
 
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="static/css/main.css">
   <style>
   </style>
 </head>
@@ -27,9 +27,11 @@
     <button class="game-button" data-choice="steen">✊ Steen</button>
     <button class="game-button" data-choice="schaar">✌️ Schaar</button>
 
-    <p id="user-choice"></p>
-    <p id="computer-choice"></p>
-    <p id="result"></p>
+    <div id="game-flow">
+      <p id="user-choice"></p>
+      <p id="computer-choice"></p>
+      <p id="game-result"></p>
+    </div>
   </section>
 
   <section id="drums">
@@ -74,102 +76,19 @@
     </div>
 
     <div>
-      <audio id="audio-81" preload="auto" src="sounds/kick.wav"></audio>
-      <audio id="audio-83" preload="auto" src="sounds/stick.wav"></audio>
-      <audio id="audio-68" preload="auto" src="sounds/snare.wav"></audio>
-      <audio id="audio-70" preload="auto" src="sounds/tom1.wav"></audio>
-      <audio id="audio-71" preload="auto" src="sounds/tom2.wav"></audio>
-      <audio id="audio-72" preload="auto" src="sounds/tom3.wav"></audio>
-      <audio id="audio-74" preload="auto" src="sounds/hihat-closed.wav"></audio>
-      <audio id="audio-75" preload="auto" src="sounds/hihat-open.wav"></audio>
-      <audio id="audio-76" preload="auto" src="sounds/crash.wav"></audio>
+      <audio id="audio-81" preload="auto" src="static/sounds/kick.wav"></audio>
+      <audio id="audio-83" preload="auto" src="static/sounds/stick.wav"></audio>
+      <audio id="audio-68" preload="auto" src="static/sounds/snare.wav"></audio>
+      <audio id="audio-70" preload="auto" src="static/sounds/tom1.wav"></audio>
+      <audio id="audio-71" preload="auto" src="static/sounds/tom2.wav"></audio>
+      <audio id="audio-72" preload="auto" src="static/sounds/tom3.wav"></audio>
+      <audio id="audio-74" preload="auto" src="static/sounds/hihat-closed.wav"></audio>
+      <audio id="audio-75" preload="auto" src="static/sounds/hihat-open.wav"></audio>
+      <audio id="audio-76" preload="auto" src="static/sounds/crash.wav"></audio>
     </div>
   </section>
 
-  <script>
-    /**
-     * Inspiratie: 
-     * - https://www.youtube.com/watch?v=ec8vSKJuZTk
-     * - https://codewithcurious.com/projects/drum-kit-with-html-css-and-js/
-     * - https://medium.com/@iminked/build-a-drum-machine-with-javascript-html-and-css-33a53eeb1f73
-     */
-
-    /**
-     * Blad, steen, schaar 
-     * Blad wint van steen.  
-     * Steen wint van schaar. 
-     * Schaar wint van blad. 
-     */
-
-    // Set variables 
-    let userChoice, computerChoice;
-    const choices = ['blad', 'steen', 'schaar'];
-    const elUserChoice = document.getElementById('user-choice');
-    const elComputerChoice = document.getElementById('computer-choice');
-    const elResult = document.getElementById('result');
-    const gameButtons = document.querySelectorAll('.game-button');
-    const elDrumsTitle = document.getElementById('drums-title');
-    const drumButtons = document.querySelectorAll('.drum-button');
-
-    // Get computer's choice
-    function getComputerChoice() {
-      return choices[Math.floor(Math.random() * choices.length)];
-    }
-
-    // Play game
-    function playGame(userChoice, computerChoice) {
-      if (userChoice === computerChoice) {
-        elResult.textContent = 'Gelijkspel';
-      } else if (userChoice === 'blad' && computerChoice === 'steen'
-        || userChoice === 'steen' && computerChoice === 'schaar'
-        || userChoice === 'schaar' && computerChoice === 'blad') {
-        elResult.textContent = 'Je wint!';
-        unlockDrums()
-      } else {
-        elResult.textContent = 'Je verliest.';
-      }
-    }
-
-    for (const button of gameButtons) {
-      button.addEventListener('click', () => {
-        // Set userChoice
-        userChoice = button.dataset.choice;
-        elUserChoice.textContent = `Jij: ${userChoice}`;
-        // Set computerChoice after 500ms
-        setTimeout(() => {
-          computerChoice = getComputerChoice();
-          elComputerChoice.textContent = `Computer: ${computerChoice}`;
-        }, 500);
-        // Play round after 500ms
-        setTimeout(() => {
-          playGame(userChoice, computerChoice);
-        }, 500);
-      });
-    }
-
-    /**
-     * Drums
-     */
-    function unlockDrums() {
-      elDrumsTitle.classList.remove('hidden');
-      for (const button of drumButtons) {
-        button.disabled = false;
-        window.addEventListener('keydown', (e) => {
-          const drumButton = document.getElementById(`key-${e.keyCode}`);
-          drumButton.classList.add('active');
-          const audio = document.getElementById(`audio-${e.keyCode}`);
-          if (!audio) return;
-          // if (!audio.paused) audio.pause();
-          audio.currentTime = 0;
-          audio.play();
-          setTimeout(() => {
-            drumButton.classList.remove('active');
-          }, 100);
-        })
-      }
-    }
-
-  </script>
+  <script src="static/js/main.js"></script>
 </body>
 
 </html>
