Fix 'key' error

--- a/app/index.html
+++ b/app/index.html
@@ -76,15 +76,15 @@
     </div>
 
     <div>
-      <audio id="audio-q" preload="auto" src="static/sounds/ogg/kick.ogg"></audio>
-      <audio id="audio-s" preload="auto" src="static/sounds/ogg/stick.ogg"></audio>
-      <audio id="audio-d" preload="auto" src="static/sounds/ogg/snare.ogg"></audio>
-      <audio id="audio-f" preload="auto" src="static/sounds/ogg/tom1.ogg"></audio>
-      <audio id="audio-g" preload="auto" src="static/sounds/ogg/tom2.ogg"></audio>
-      <audio id="audio-h" preload="auto" src="static/sounds/ogg/tom3.ogg"></audio>
-      <audio id="audio-j" preload="auto" src="static/sounds/ogg/hihat-closed.ogg"></audio>
-      <audio id="audio-k" preload="auto" src="static/sounds/ogg/hihat-open.ogg"></audio>
-      <audio id="audio-l" preload="auto" src="static/sounds/ogg/crash.ogg"></audio>
+      <audio id="audio-q" preload="auto" src="static/sounds/kick.ogg"></audio>
+      <audio id="audio-s" preload="auto" src="static/sounds/stick.ogg"></audio>
+      <audio id="audio-d" preload="auto" src="static/sounds/snare.ogg"></audio>
+      <audio id="audio-f" preload="auto" src="static/sounds/tom1.ogg"></audio>
+      <audio id="audio-g" preload="auto" src="static/sounds/tom2.ogg"></audio>
+      <audio id="audio-h" preload="auto" src="static/sounds/tom3.ogg"></audio>
+      <audio id="audio-j" preload="auto" src="static/sounds/hihat-closed.ogg"></audio>
+      <audio id="audio-k" preload="auto" src="static/sounds/hihat-open.ogg"></audio>
+      <audio id="audio-l" preload="auto" src="static/sounds/crash.ogg"></audio>
     </div>
   </section>
 
