--- a/app/index.html
+++ b/app/index.html
@@ -39,54 +39,54 @@
   <section id="drums">
     <h2 id="drums-title" class="hidden">Speel op de drums</h2>
     <div class="grid-buttons">
-      <button class="drum-button" id="key-q" disabled>
+      <button class="drum-button" id="key-Q" disabled>
         <kbd>q|a</kbd>
         <span>kick</span>
       </button>
-      <button class="drum-button" id="key-s" disabled>
+      <button class="drum-button" id="key-S" disabled>
         <kbd>s</kbd>
         <span>stick</span>
       </button>
-      <button class="drum-button" id="key-d" disabled>
+      <button class="drum-button" id="key-D" disabled>
         <kbd>d</kbd>
         <span>snare</span>
       </button>
-      <button class="drum-button" id="key-f" disabled>
+      <button class="drum-button" id="key-F" disabled>
         <kbd>f</kbd>
         <span>tom 1</span>
       </button>
-      <button class="drum-button" id="key-g" disabled>
+      <button class="drum-button" id="key-G" disabled>
         <kbd>g</kbd>
         <span>tom 2</span>
       </button>
-      <button class="drum-button" id="key-h" disabled>
+      <button class="drum-button" id="key-H" disabled>
         <kbd>h</kbd>
         <span>tom 3</span>
       </button>
-      <button class="drum-button" id="key-j" disabled>
+      <button class="drum-button" id="key-J" disabled>
         <kbd>j</kbd>
         <span>hihat 1</span>
       </button>
-      <button class="drum-button" id="key-k" disabled>
+      <button class="drum-button" id="key-K" disabled>
         <kbd>k</kbd>
         <span>hihat 2</span>
       </button>
-      <button class="drum-button" id="key-l" disabled>
+      <button class="drum-button" id="key-L" disabled>
         <kbd>l</kbd>
         <span>crash</span>
       </button>
     </div>
 
     <div>
-      <audio id="audio-q" preload="auto" src="static/sounds/kick.ogg"></audio>
-      <audio id="audio-s" preload="auto" src="static/sounds/stick.ogg"></audio>
-      <audio id="audio-d" preload="auto" src="static/sounds/snare.ogg"></audio>
-      <audio id="audio-f" preload="auto" src="static/sounds/tom1.ogg"></audio>
-      <audio id="audio-g" preload="auto" src="static/sounds/tom2.ogg"></audio>
-      <audio id="audio-h" preload="auto" src="static/sounds/tom3.ogg"></audio>
-      <audio id="audio-j" preload="auto" src="static/sounds/hihat-closed.ogg"></audio>
-      <audio id="audio-k" preload="auto" src="static/sounds/hihat-open.ogg"></audio>
-      <audio id="audio-l" preload="auto" src="static/sounds/crash.ogg"></audio>
+      <audio id="audio-Q" preload="auto" src="static/sounds/kick.ogg"></audio>
+      <audio id="audio-S" preload="auto" src="static/sounds/stick.ogg"></audio>
+      <audio id="audio-D" preload="auto" src="static/sounds/snare.ogg"></audio>
+      <audio id="audio-F" preload="auto" src="static/sounds/tom1.ogg"></audio>
+      <audio id="audio-G" preload="auto" src="static/sounds/tom2.ogg"></audio>
+      <audio id="audio-H" preload="auto" src="static/sounds/tom3.ogg"></audio>
+      <audio id="audio-J" preload="auto" src="static/sounds/hihat-closed.ogg"></audio>
+      <audio id="audio-K" preload="auto" src="static/sounds/hihat-open.ogg"></audio>
+      <audio id="audio-L" preload="auto" src="static/sounds/crash.ogg"></audio>
     </div>
   </section>
 
