Update 'description' in app/index.html

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A  tutorial that shows you how to start coding.">
+  <meta name="description"
+        content="Een drummachine die je moet ontgrendelen met een blad-steen-schaar spel.">
   <meta name="author" content="Dirk Bouckaert">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style"
+        content="black-translucent">
 
   <title>App | Start2️⃣Code</title>
 
@@ -84,13 +86,16 @@
       <audio id="audio-F" preload="auto" src="static/sounds/tom1.ogg"></audio>
       <audio id="audio-G" preload="auto" src="static/sounds/tom2.ogg"></audio>
       <audio id="audio-H" preload="auto" src="static/sounds/tom3.ogg"></audio>
-      <audio id="audio-J" preload="auto" src="static/sounds/hihat-closed.ogg"></audio>
-      <audio id="audio-K" preload="auto" src="static/sounds/hihat-open.ogg"></audio>
+      <audio id="audio-J" preload="auto"
+             src="static/sounds/hihat-closed.ogg"></audio>
+      <audio id="audio-K" preload="auto"
+             src="static/sounds/hihat-open.ogg"></audio>
       <audio id="audio-L" preload="auto" src="static/sounds/crash.ogg"></audio>
     </div>
   </section>
 
-  <button class="reset-game-button" id="reset-game-button" disabled>Reset</button>
+  <button class="reset-game-button" id="reset-game-button"
+          disabled>Reset</button>
 
   <script src="static/js/main.js"></script>
 </body>
