--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
 
   <section id="drums">
     <h2 id="drums-title" class="hidden">Speel op de drums</h2>
+
     <div class="grid-buttons">
       <button class="drum-button" id="key-Q" disabled>
         <kbd>q|a</kbd>
@@ -79,7 +80,7 @@
       </button>
     </div>
 
-    <div>
+    <div class="grid-sounds">
       <audio id="audio-Q" preload="auto" src="static/sounds/kick.ogg"></audio>
       <audio id="audio-S" preload="auto" src="static/sounds/stick.ogg"></audio>
       <audio id="audio-D" preload="auto" src="static/sounds/snare.ogg"></audio>
@@ -92,6 +93,7 @@
              src="static/sounds/hihat-open.ogg"></audio>
       <audio id="audio-L" preload="auto" src="static/sounds/crash.ogg"></audio>
     </div>
+
   </section>
 
   <button class="reset-game-button" id="reset-game-button"
