--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A  tutorial that shows you how to start coding.">
+  <meta name="description"
+        content="A tutorial that shows you how to start coding.">
   <meta name="author" content="Dirk Bouckaert">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style"
+        content="black-translucent">
 
   <title>Start2️⃣Code</title>
 
-  <link rel="shortcut icon" href="tutorial/static/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="tutorial/static/images/favicon.ico"
+        type="image/x-icon">
 
   <style>
     body {
@@ -91,7 +94,8 @@
     </li>
   </ul>
 
-  <img src="tutorial/static/images/ahs-logo-txt.png" alt="Arteveldehogeschool logo" />
+  <img src="tutorial/static/images/ahs-logo-txt.png"
+       alt="Arteveldehogeschool logo" />
 
 </body>
 
