--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -4,51 +4,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A  tutorial that shows you how to start coding.">
+  <meta name="description"
+        content="Een tutorial waarin je leert coderen.">
   <meta name="author" content="Dirk Bouckaert">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style"
+        content="black-translucent">
 
   <title>Tutorial | Start2️⃣Code</title>
 
-  <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="static/images/favicon.ico"
+        type="image/x-icon">
 
   <link rel="stylesheet" href="static/revealjs/reset.css">
   <link rel="stylesheet" href="static/revealjs/reveal.css">
+
+  <!-- Theme -->
   <link rel="stylesheet" href="static/revealjs/theme/black.css" id="theme">
 
   <!-- Theme used for syntax highlighting of code -->
   <link rel="stylesheet" href="static/revealjs/plugin/highlight/monokai.css">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="static/revealjs/custom.css">
 
 </head>
 
 <body>
 
   <div class="reveal">
-    <div class="slides">
-
-      <section>
-        <h1>Start2️⃣Code</h1>
-        <h2>Coming soon...</h2>
-        <img src="static/images/ahs-logo-txt.png" alt="Arteveldehogeschool logo"
-             style="height: 100px; margin: 4rem auto;">
-      </section>
-
+    <div class="slides" id="slides">
     </div>
   </div>
 
   <script src="static/revealjs/reveal.js"></script>
   <script src="static/revealjs/plugin/highlight/highlight.js"></script>
-  <script>
-    Reveal.initialize({
-      controls: true,
-      progress: true,
-      center: true,
-      hash: true,
-      plugins: [RevealHighlight]
-    });
-
-  </script>
+  <script src="static/app.js"></script>
 
 </body>
 
