Add spinner when tutorial is being loaded

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -31,6 +31,10 @@
 </head>
 
 <body>
+  <div class="placeholder">
+    <div class="spinner"></div>
+    <p>De tutorial wordt opgestart.</p>
+  </div>
 
   <div class="reveal">
     <div class="slides" id="slides">
@@ -39,6 +43,7 @@
 
   <script src="static/revealjs/reveal.js"></script>
   <script src="static/revealjs/plugin/highlight/highlight.js"></script>
+  <script src="static/revealjs/plugin/copycode/copycode.js"></script>
   <script src="static/app.js"></script>
 
 </body>
