Escape some html-tags to stop code snippets from being rendered

--- a/tutorial/static/slides/4.html
+++ b/tutorial/static/slides/4.html
@@ -41,15 +41,15 @@
     en voeg deze code toe:
     <pre>
           <code data-trim data-line-numbers>
-            <audio id="audio-Q" preload="auto" src="static/sounds/kick.ogg"></audio>
-            <audio id="audio-S" preload="auto" src="static/sounds/stick.ogg"></audio>
-            <audio id="audio-D" preload="auto" src="static/sounds/snare.ogg"></audio>
-            <audio id="audio-F" preload="auto" src="static/sounds/tom1.ogg"></audio>
-            <audio id="audio-G" preload="auto" src="static/sounds/tom2.ogg"></audio>
-            <audio id="audio-H" preload="auto" src="static/sounds/tom3.ogg"></audio>
-            <audio id="audio-J" preload="auto" src="static/sounds/hihat-closed.ogg"></audio>
-            <audio id="audio-K" preload="auto" src="static/sounds/hihat-open.ogg"></audio>
-            <audio id="audio-L" preload="auto" src="static/sounds/crash.ogg"></audio>
+            &lt;audio id="audio-Q" preload="auto" src=static/sounds/kick.ogg"></audio>
+            &lt;audio id="audio-S" preload="auto" src=static/sounds/stick.ogg"></audio>
+            &lt;audio id="audio-D" preload="auto" src=static/sounds/snare.ogg"></audio>
+            &lt;audio id="audio-F" preload="auto" src=static/sounds/tom1.ogg"></audio>
+            &lt;audio id="audio-G" preload="auto" src=static/sounds/tom2.ogg"></audio>
+            &lt;audio id="audio-H" preload="auto" src=static/sounds/tom3.ogg"></audio>
+            &lt;audio id="audio-J" preload="auto" src=static/sounds/hihat-closed.ogg"></audio>
+            &lt;audio id="audio-K" preload="auto" src=static/sounds/hihat-open.ogg"></audio>
+            &lt;audio id="audio-L" preload="auto" src=static/sounds/crash.ogg"></audio>
           </code>
         </pre>
     </p>
