--- a/tutorial/static/slides/6.html
+++ b/tutorial/static/slides/6.html
@@ -26,7 +26,7 @@
     en voeg deze code toe:
     <pre>
       <code data-trim>
-        <link rel="stylesheet" href="static/css/main.css">
+        &lt;link rel="stylesheet" href="static/css/main.css">
       </code>
     </pre>
     </p>
