Hide copy button when snippet is not for copying

--- a/tutorial/static/slides/3.html
+++ b/tutorial/static/slides/3.html
@@ -5,8 +5,8 @@
 
     <p>
       Zoek in <strong>index.html</strong> de commentaar
-    <pre>
-      <code data-trim >
+    <pre data-cc="false">
+      <code data-trim>
         <!-- TODO: voeg de blad-steen-schaar knoppen toe -->
       </code>
     </pre>
@@ -28,7 +28,7 @@
     <h2>HTML: blad-steen-schaar</h2>
     <p>
       Zoek de commentaar
-    <pre>
+    <pre data-cc="false">
       <code data-trim >
         <!-- TODO: voeg de game-flow sectie toe -->
       </code>
