--- a/tutorial/static/slides/4.html
+++ b/tutorial/static/slides/4.html
@@ -5,7 +5,7 @@
 
     <p>
       Zoek de commentaar
-    <pre>
+    <pre data-cc="false">
       <code data-trim >
         <!-- TODO: voeg de knoppen van de drummachine toe -->
       </code>
@@ -33,7 +33,7 @@
 
     <p>
       Zoek de commentaar
-    <pre>
+    <pre data-cc="false">
           <code data-trim >
             <!-- TODO: voeg de geluiden van de drummachine toe -->
           </code>
