--- a/tutorial/static/slides/5.html
+++ b/tutorial/static/slides/5.html
@@ -5,7 +5,7 @@
 
     <p>
       Zoek de commentaar
-    <pre>
+    <pre data-cc="false">
       <code data-trim >
         <!-- TODO: voeg de knop toe om de game te resetten -->
       </code>
