--- a/tutorial/static/slides/6.html
+++ b/tutorial/static/slides/6.html
@@ -18,7 +18,7 @@
 
     <p>
       Zoek de commentaar
-    <pre>
+    <pre data-cc="false">
       <code data-trim >
         <!-- TODO: voeg de link naar het CSS-bestand toe -->
       </code>
